# Dot-Legacy

./: .gitignore  README.md
backend/: .gitignore  package-lock.json  package.json
backend/src/: api.js  config.js  contracts.js  index.js  keeper.js  mailer.js  registry.js  test.js
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: GuardianManager.sol  LegacyVault.sol  WillCertificate.sol
contracts/src/interfaces/: ILegacyVault.sol  ISecretSharing.sol
contracts/src/mocks/: ERC20Mock.sol
contracts/test/: LegacyVault.t.sol
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/claim/: page.tsx
frontend/app/claim/components/: BeneficiaryView.tsx  GuardianSubmit.tsx  SharesProgress.tsx  TimelockCountdown.tsx  WillLookup.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: Assets.tsx  CountdownTimer.tsx  CreateWillForm.tsx  WillCard.tsx
frontend/components/: ConnectWallet.tsx  Navbar.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx  StatusBadge.tsx
frontend/config/: chain.ts  contracts.ts
frontend/hooks/: useCountdown.ts  useWill.ts
frontend/lib/: shamir.ts  utils.ts  wagmi.ts
pvm-contract/: .gitignore  Cargo.toml  ISecretSharing.sol  Makefile  riscv64emac-unknown-none-polkavm.json
pvm-contract/.cargo/: config.toml
pvm-contract/src/: main.rs
