[package]
name = "dotlegacy-secret-sharing"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"
description = "DotLegacy Shamir Secret Sharing — PVM smart contract"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.27", optional = true }
uapi = { package = "pallet-revive-uapi", version = "0.7", default-features = false, optional = true }

[features]
# default builds with PVM host functions (for RISC-V target)
default = ["pvm"]
pvm = ["dep:polkavm-derive", "dep:uapi"]
# use --no-default-features for local math tests